--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,6 +28,11 @@ faf-client:
   client-config-url: http://content.faforever.com/dfc-config.json
   client-config-connect-timeout: 10s
 
+  discord:
+    application_id: 464069837237518357
+    small_image_key: faf_logo_small
+    big_image_key: faf_logo_big
+
 spring:
   profiles:
     active: ${CLIENT_PROFILE:prod}
